docs(README): 更新 MongoDB 启动方式
- 在 README.md 和 README-CN.md 中更新了 MongoDB启动命令
- 替换原有的 docker-compose 命令为更简单的 docker run 命令
- 新命令使用 mongo:latest 镜像启动 MongoDB 容器